# file-parser

./: CLAUDE.md  Cargo.toml  README.md  errors.txt  test_input.txt
src/: args.rs  boundaries.rs  gui.rs  main.rs  patterns.rs  sections.rs  source.rs  state.rs  storage.rs  tui.rs  worker.rs
src/pipeline/: local.rs  remote.rs
tests/fixtures/: large.txt  multi_boundary.txt  no_addval.txt  no_sections.txt  one_of_each.txt  preamble.txt
